Registration and loggining with mail is working